--- a/roles/app/handlers/main.yml
+++ b/roles/app/handlers/main.yml
@@ -1,3 +1,14 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# handlers file for roles/app
+- name: Reload systemd daemon when exploring service configuration changes
+  tags: app, service, systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
+  when: app_exploring_service_conf.changed
+  listen: ReloadSystemd
+
+- name: Reload systemd daemon when watching service configuration changes
+  tags: app, service, systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
+  when: app_watching_service_conf.changed
+  listen: ReloadSystemd
