--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,18 @@
 [defaults]
 inventory = ./incus.yml
+# inventory = ./hosts.ini
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings = False
 command_warnings = False
 interpreter_python = auto_silent
+; callbacks_enabled = timer, profile_tasks, profile_roles
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp/ansible_facts
+forks = 20
+# interpreter_python = ~/python_test/bin/python3
 
 [ssh_connection]
+; ssh_args=-o ControlMaster=auto -o ControlPersist=600s
 pipelining = True
