--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -1,3 +1,31 @@
-#SPDX-License-Identifier: MIT-0
----
-# tasks file for roles/app
+- name: Detect the wanted module
+  ansible.builtin.set_fact:
+    # app_os_family: "{{ ansible_facts['os_family'] }}"
+    # app_os_distribution: "{{ ansible_facts['distribution'] }}"
+    # app_os_version: "{{ ansible_facts['distribution_version'] }}"
+    app_modules: "{{ app_modules | default({'explorer': true, 'watcher': false}) }}"
+
+- name: Include module variables
+  ansible.builtin.include_vars:
+    file: "vars/{{ item }}.yml"
+  with_items: "{{ app_modules | dict2items | selectattr('value', 'equalto', true) | map(attribute='key') | list }}"
+
+- name: Test variables loaded
+  ansible.builtin.debug:
+    var: app_modules
+
+- name: Deploy explorer module
+  tags: app, deploy, explorer
+  # async: 1800
+  # poll: 0
+  ansible.builtin.include_tasks:
+    file: explorer.yml
+  when: app_modules.explorer | default(false)
+
+- name: Deploy watcher module
+  tags: app, deploy, watcher
+  # async: 1800
+  # poll: 0
+  ansible.builtin.include_tasks:
+    file: watcher.yml
+  when: app_modules.watcher | default(false)
