--- a/roles/db/handlers/main.yml
+++ b/roles/db/handlers/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# handlers file for roles/db
+- name: Start MongoDB
+  ansible.builtin.service:
+    name: mongod
+    state: started
+    enabled: true
