--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -27,3 +27,21 @@
 - name: Configure SSH for Windows
   ansible.builtin.include_tasks: windows.yml
   when: os_family == "Windows"
+
+- name: Ensure SSHD service is enabled and started
+  ansible.builtin.service:
+    name: "{{ sshd_service }}"
+    state: started
+    enabled: true
+- name: Copy ssh key to authorized_keys
+  ansible.builtin.authorized_key:
+    user: "{{ sshd_user }}"
+    state: present
+    key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+- name: Disable password authentication for SSH
+  ansible.builtin.lineinfile:
+    path: /etc/ssh/sshd_config
+    regexp: '^PasswordAuthentication'
+    line: 'PasswordAuthentication no'
+    state: present
+  when: os_family != "Windows"
