DB done for Mongo & Couch, App done for all (with env conf), Network done for debian distrib family, SSH done for debian distrib family

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,17 +1,24 @@
 [defaults]
-inventory = ./incus.yml
-# inventory = ./hosts.ini
+inventory = ./inventories/
+; inventory = ./incus.yml
+; inventory = ./hosts.ini
+vault_editor = nano
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings = False
 command_warnings = False
 interpreter_python = auto_silent
 ; callbacks_enabled = timer, profile_tasks, profile_roles
+####################
+# gathering = explicit
+fact_caching = none
 gathering = smart
-fact_caching = jsonfile
+# fact_caching = jsonfile
+####################
 fact_caching_connection = /tmp/ansible_facts
 forks = 20
 # interpreter_python = ~/python_test/bin/python3
+vault_password_file = ~/.ansible_vault_pass
 
 [ssh_connection]
 ; ssh_args=-o ControlMaster=auto -o ControlPersist=600s
