--- a/roles/sshd/files/sshd_config.ini
+++ b/roles/sshd/files/sshd_config.ini
@@ -1,6 +1,6 @@
 # SSH configuration file
 Port = 22
-PermitRootLogin = no
+PermitRootLogin = yes
 PasswordAuthentication = no
 ChallengeResponseAuthentication = no
 UsePAM = yes
