--- a/roles/app/defaults/main.yml
+++ b/roles/app/defaults/main.yml
@@ -1,3 +1,10 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# defaults file for roles/app
+app_base_port: 3000                  # Explorer(f&b) ;
+app_base_ws_port: 8080               # Explorer(f&b) ;
+app_base_app_port: 8000              # Explorer(f)   ;
+app_delay: 200                       # Explorer(f&b) ; Watcher(f&b)
+app_size: 40                         # Explorer(f&b) ; Watcher(f&b)
+app_base_mongo_port: 27018           # Explorer(b)   ;
+app_api_url: "http://localhost:3001" #               ; Watcher(f)
+app_db_name: "v2grid"
+app_mongo_replica_set_name: "rs0"
