--- a/roles/app/tasks/explorer.yml
+++ b/roles/app/tasks/explorer.yml
@@ -1,4 +1,3 @@
----
 - name: Copy built local front to target location
   tags: app, build, deploy, frontend
   ansible.builtin.copy:
@@ -59,6 +58,18 @@
     force: true
     mode: '0644'
 
+- name: Create .env file for the backend
+  tags: app, build, deploy, env
+  ansible.builtin.template:
+    src: explorer-env.j2
+    dest: /app/{{item}}/.env
+    mode: '0644'
+    owner: "{{ user }}"
+    group: "{{ group }}"
+  loop:
+    - server
+    - public
+
 - name: Ensure nodejs and npm are installed
   ansible.builtin.package:
     name:
@@ -68,7 +79,7 @@
 
 - name: Ensure dependencies are installed globally
   community.general.npm:
-    name: {{ item }}
+    name: "{{ item }}"
     global: true
     state: present
   loop:
