--- a/roles/db/handlers/main.yml
+++ b/roles/db/handlers/main.yml
@@ -1,6 +1,15 @@
 ---
-- name: Start MongoDB
+- name: Restart MongoDB
   ansible.builtin.service:
     name: mongod
-    state: started
+    state: restarted
     enabled: true
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
+  listen: reload_systemd
+- name: Restart CouchDB
+  ansible.builtin.systemd:
+    name: couchdb
+    state: restarted
+  listen: restart_couchdb
