--- a/roles/network/tasks/main.yml
+++ b/roles/network/tasks/main.yml
@@ -1,7 +1,6 @@
 ---
-- name: Display OS family
-  ansible.builtin.debug:
-    var: ansible_network_os_family
+- name: Gather facts
+  ansible.builtin.setup:
 
 - name: Display distribution
   ansible.builtin.debug:
@@ -10,6 +9,29 @@
 - name: Display system
   ansible.builtin.debug:
     var: ansible_system
+
+- name: Display hostname
+  ansible.builtin.debug:
+    var: ansible_hostname
+
+# - name: Extract default IPv4 address
+#   ansible.builtin.debug:
+#     msg: "{{ ansible_facts | json_query('ansible_default_ipv4.address') }}"
+
+- name: Display the default IPv4 address
+  ansible.builtin.debug:
+    msg: "{{ ansible_default_ipv4.address }}"
+
+- name: Save facts to a JSON file
+  ansible.builtin.copy:
+    content: "{{ ansible_facts | to_nice_json }}"
+    dest: "/tmp/{{ inventory_hostname }}_facts.json"
+    mode: '0644'
+
+- name: Configure linux network settings
+  ansible.builtin.include_tasks:
+    file: linux.yml
+  when: ansible_system in ['Linux']
 
 # - name: Get running configuration
 #   ansible.netcommon.cli_command:
