--- a/roles/sshd/tasks/linux.yml
+++ b/roles/sshd/tasks/linux.yml
@@ -1,4 +1,8 @@
 ---
+- name: Update apt cache
+  ansible.builtin.apt:
+    update_cache: yes
+
 - name: Ensure SSH service is installed
   ansible.builtin.package:
     name: "{{ sshd_service }}"
