Little bit of cleaning and adding deploy keys etc troubleshooting

--- a/inventories/local.ini
+++ b/inventories/local.ini
@@ -1,2 +1,7 @@
-; [exploringAgents]
-; Explo4 ansible_host=134.206.154.215 ansible_user=smac ansible_become_password="{{ vault_sudo_passwords.Explo4 }}" ansible_password="{{ vault_ssh_passwords.Explo4 }}" ansible_ssh_private_key_file=/home/axel/.ssh/id_ed25519 ansible_connection=ssh
+# [local_inv]
+# Explo4 ansible_host=134.206.154.215 ansible_user=smac ansible_become_password="{{ vault_sudo_passwords.Explo4 }}" ansible_password="{{ vault_ssh_passwords.Explo4 }}" ansible_ssh_private_key_file=/home/axel/.ssh/id_ed25519 ansible_connection=ssh
+# Explo5 ansible_host=134.206.154.65 ansible_user=smac ansible_become_password="{{ vault_sudo_passwords.Explo5 }}" ansible_password="{{ vault_ssh_passwords.Explo5 }}" ansible_ssh_private_key_file=/home/axel/.ssh/id_ed25519 ansible_connection=ssh
+# Explo6 ansible_host=134.206.154.216 ansible_user=smac ansible_become_password="{{ vault_sudo_passwords.Explo6 }}" ansible_password="{{ vault_ssh_passwords.Explo6 }}" ansible_ssh_private_key_file=/home/axel/.ssh/id_ed25519 ansible_connection=ssh
+
+# [exploringAgents:children]
+# local_inv
