--- a/roles/app/defaults/main.yml
+++ b/roles/app/defaults/main.yml
@@ -8,3 +8,4 @@ app_base_mongo_port: 27018           # Explorer(b)   ;
 app_api_url: "http://localhost:3001" #               ; Watcher(f)
 app_db_name: "v2grid"
 app_mongo_replica_set_name: "rs0"
+app_version: "master"              # Possible versions : mongodb, couchdb, master
