Added the keys inside the "files" folder to be able to deploy from any host

--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -137,7 +137,7 @@
 - name: Copy deploy keys to remote host
   tags: app, deploy, keys, explorer, watcher
   ansible.builtin.copy:
-    src: "~/.ssh/{{ item }}"
+    src: "files/{{ item }}"
     dest: "~/.ssh/{{ item }}"
     mode: '0600'
     owner: "{{ user }}"
