App deployment finished, simulation loop WIP

--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ BASE_APP_PORT=8000
 NETWORK_SUBNET=10.89.2.0/24
 DELAY=200
 SIZE=40
-
+AGENT_NAME=agent002
+REPL_MONGO_URI=mongodb://agent001:27018,agent002:27018,agent003:27018/ v2grid?replicaSet=rs0
+DB_NAME=v2grid
 BASE_MONGO_PORT=27018
