--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,10 +10,10 @@ command_warnings = False
 interpreter_python = auto_silent
 ; callbacks_enabled = timer, profile_tasks, profile_roles
 ####################
-# gathering = explicit
+; gathering = explicit
 fact_caching = none
 gathering = smart
-# fact_caching = jsonfile
+; fact_caching = jsonfile
 ####################
 fact_caching_connection = /tmp/ansible_facts
 forks = 20
