--- a/roles/sshd/files/sshd_config.ini
+++ b/roles/sshd/files/sshd_config.ini
@@ -1,7 +1,7 @@
 # SSH configuration file
 Port = 22
 PermitRootLogin = yes
-PasswordAuthentication = no
+PasswordAuthentication = yes # prohibit-password
 ChallengeResponseAuthentication = no
 UsePAM = yes
 X11Forwarding = yes
