--- a/roles/sshd/tasks/linux.yml
+++ b/roles/sshd/tasks/linux.yml
@@ -5,7 +5,7 @@
 
 - name: Ensure SSH service is installed
   ansible.builtin.package:
-    name: "{{ sshd_service }}"
+    name: "openssh-server"
     state: present
 
 - name: Ensure SSH service is enabled and running
@@ -18,7 +18,14 @@
   ansible.builtin.copy:
     src: files/sshd_config.ini
     dest: /etc/ssh/sshd_config
-    owner: root
-    group: root
-    mode: 0644
+    owner: "root"
+    group: "root"
+    mode: '0600'
   notify: Restart SSHD
+
+# - name: Add key to authorized_keys
+#   ansible.builtin.authorized_key:
+#     user: "{{ ansible_user }}"
+#     state: present
+#     key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+#     manage_dir: false
