--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -26,38 +26,26 @@
     state: started
     enabled: true
 
-- name: Ensure the root user's .ssh directory exists
+- name: Ensure SSH key pair exists locally
+  ansible.builtin.openssh_keypair:
+    path: "{{ ssh_key_path }}"
+    type: ed25519
+    state: present
+  delegate_to: localhost
+  run_once: true
+  become: false
+
+- name: Ensure the {{ ansible_user }} user's .ssh directory exists
   ansible.builtin.file:
-    path: /root/.ssh
+    path: /home/{{ ansible_user }}/.ssh
     state: directory
     mode: '0700'
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
 
-# - name: Ensure SSH key exists for the user
-#   ansible.builtin.user:
-#     name: "{{ sshd_user }}"
-#     generate_ssh_key: true
-#     ssh_key_bits: 2048
-#     ssh_key_comment: "{{ sshd_user }}@{{ ansible_facts['hostname'] }}"
-#   when: os_family != "Windows"
-
-- name: Copy ssh key to authorized_keys
+- name: Copy public key to remote user's authorized_keys
   ansible.builtin.authorized_key:
-    user: "root"
+    user: "{{ ansible_user }}"
     state: present
-    key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
-  when: os_family != "Windows"
-
-- name: Enable root login in SSH configuration
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: '^#?PermitRootLogin'
-    line: 'PermitRootLogin yes'
-    state: present
-  notify: Restart SSHD
-# - name: Disable password authentication for SSH
-#   ansible.builtin.lineinfile:
-#     path: /etc/ssh/sshd_config
-#     regexp: '^PasswordAuthentication'
-#     line: 'PasswordAuthentication no'
-#     state: present
-#   when: os_family != "Windows"
+    key: "{{ lookup('file', ssh_key_path + '.pub') }}"
+    manage_dir: false
